[package]
name = "nix-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ncd"
path = "src/main.rs"
[[bin]]
name = "npath"
path = "src/npath/main.rs"
[[bin]]
name = "scd"
path = "src/scd/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix-config = "0.36.1"
url = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4.37"
tokio = { version = "1", features = ["full"] }
flate2 = "1.0.30"
chrono = "0.4.38"
dirs = "5.0.1"
ssh2 = "0.9.4"
ssh2-config = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
